Implemented secrets file

--- a/PizzaBox.Api/PizzaBox.Api/PizzaBox.Api.csproj
+++ b/PizzaBox.Api/PizzaBox.Api/PizzaBox.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\PizzaBox.Domain\PizzaBox.Domain.csproj" />
     <ProjectReference Include="..\..\PizzaBox.Storing\PizzaBox.Storing.csproj" />
   </ItemGroup>
 
